tests/programs/invalid/array_return_suffix.java
public class array_return_suffix {
  public A() {}
  public int foo()[] { return null; }
}